@@ -156,6 +156,7 @@ Release 1.7
 * If there is a duplicate relation name during reverse engineering, a new unique name is generated
 * Added support to Export model to OpenXava
 * DataType configuration is now stored in user's home directory
+* Plugin is now also available for Eclipse
 * Bug Fixing 2513135 [ERDesignerNG] Oracle complete compare fails with date colum
 * Bug Fixing 2675526 [ERDesignerNG] Generation of migration script not possible
 * Bug Fixing 2615849 [ERDesignerNG] Wrong dialect is used to communicate with rep
